# rust-auth-server

./: Cargo.toml  README.md
migrations/2022-10-14-121759_users/: up.sql
migrations/2022-10-14-121837_invitations/: up.sql
src/: auth_handler.rs  email_service.rs  errors.rs  invitation_handler.rs  main.rs  models.rs  register_handler.rs  utils.rs
