[package]
name = "rust-auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }

actix-web = "4.2.1"
chrono = "0.4.22"
derive_more = "0.99.17"
diesel = { version = "2", features = ["mysql", "uuid", "r2d2", "chrono"] }
diesel_migrations = "2"
dotenv = "0.15.0"
env_logger = "0.9.1"
futures = "0.3.24"
lazy_static = "1.4.0"
r2d2 = "0.8.10"
rust-argon2 = "1.0.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sparkpost = "0.5.4"
time = "0.3.15"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
lettre = "0.10"
log = "0.4.17"
# log4rs = { version = "1.2.0", features = ["pattern_encoder"] }
